fix z-index

--- a/app/assets/stylesheets/helpers.scss
+++ b/app/assets/stylesheets/helpers.scss
@@ -33,7 +33,7 @@
   margin-left: -100px;
   background: #19B5FE;
 
-  z-index: 100;
+  z-index: 105;
   opacity: 0.88;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
@@ -51,7 +51,7 @@
   color: #fff;
   text-align: center;
 
-  z-index: 100;
+  z-index: 105;
   opacity: 0.88;
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
